# oz_coding

./: workspace.code-workspace
Admin/: 회원가입.html
Admin 과제/: Admin.html
Database/Database1일차/: chapter01_06.ipynb
Database/Database2일차/: chapter07_13.ipynb
Database/Database3일차/: database3일차 과제.sql
Database/Database4일차/: database 삭제.sql  database 업데이트.sql  database 읽기.sql  database데이터 생성.sql
Django/django1일차/oz-backend-django/: db.sqlite3  manage.py  pyproject.toml
Django/django8일차/oz-backend-django1/: pyproject.toml
Django/django8일차/oz-backend-django1/feeds/: models.py
Django/django8일차/oz-backend-django1/users/: models.py  urls.py  views.py
JavaScript/javascript1일차/: user.html
Python/python_1일차/: Ch04_task(code).ipynb
Python/python_2일차/: Ch05_task.ipynb  Ch06_task.ipynb  Ch07_task.ipynb  Ch08_task.ipynb  Chapter0508_과제(cs).ipynb  Chapter0508_과제.ipynb  level1.ipynb  level2.ipynb  level3.ipynb
Python/python_3일차/: Chaper0913_task.ipynb
Python/python_4일차/: Chaper1416_task.ipynb
Python/python_5일차/: Chapter1720_task.ipynb
Python/python_6일차/: Ch21_task.ipynb  Ch22_task.ipynb  Ch23_task.ipynb  Ch24_task.ipynb  Ch25_task.ipynb  Ch26_task.ipynb  Ch27_task.ipynb  Ch28_task.ipynb  Ch29_task.ipynb  Ch30_task.ipynb  Ch31_task.ipynb  Ch32_task.ipynb
Python/python_7일차/: task_1.ipynb  task_2.ipynb  task_3.ipynb  task_4.ipynb  task_5.ipynb  task_6.ipynb  task_7.ipynb  task_8.ipynb  task_9.ipynb
Python/python_8일차/: task_1.ipynb  task_2.ipynb  task_3.ipynb  task_4.ipynb  task_5.ipynb  task_6.ipynb
git_hub/git_hub1일차/: oz_back.yaml
(+73 files in other folders)
